fixes alignment issue in experience

--- a/css/style.css
+++ b/css/style.css
@@ -349,8 +349,9 @@ section {
 article {
   display: flex;
   width: 10rem;
-  justify-content: space-around;
+  justify-content: flex-start;
   gap: 0.5rem;
+  align-items: flex-start;
 }
 
 article .icon {
